--- a/style.css
+++ b/style.css
@@ -1,11 +1,86 @@
+body {
+  font-family: "Poppins", sans-serif;
+}
+#subjectTable,
+#ScoreTable {
+  width: 50%;
+  float: left;
+}
+
+.clearfix::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+h1 {
+  text-align: center;
+}
+.note {
+  background-color: #f0f0f0;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  max-width: 400px;
+}
+.title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.box {
+  margin-bottom: 20px;
+  display: flex;
+  align-items: center;
+}
+
+.box span {
+  flex: 1;
+}
+
+.box input {
+  flex: 1;
+  margin-left: 10px;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.button-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+button {
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  background-color: #007bff;
+  color: #fff;
+  cursor: pointer;
+  transition: all 0.5s;
+}
+
+button:hover {
+  background-color: #0056b3;
+}
+
 .hidden {
   display: none;
+  margin: auto;
 }
 
 .visible {
   display: block;
 }
-th,td{
+th,
+td {
   border: 1px solid black;
   padding: 10px;
 }
